syntax = "proto3";

package api.auth;

option go_package = "api/internal/proto/auth;authservice";

message Session {
  string id = 1;
  string user_id = 2;
  string refresh_token = 3;
  string provider = 4;
  string created_at = 5;
  string expires_at = 6;
}

service Auth {
  rpc GetSession (GetSessionRequest) returns (Session){
    option idempotency_level = NO_SIDE_EFFECTS;
  }; 
  rpc Login (LoginRequest) returns (LoginResponse);
  rpc Register (RegisterRequest) returns (LoginResponse);
}

message GetSessionRequest {
}

message LoginRequest {
  string email = 1;
  string password = 2;
}
message LoginResponse {}
message RegisterRequest {
  string name = 1;
  string email = 2;
  string password = 3;
}
